<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    style="@style/NoLineSelection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorCompBgLogin"
    tools:context="com.nippylinks.android.LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:paddingTop="80dp">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/logo" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:padding="4dp"
                android:drawableLeft="@drawable/email_icon"
                android:drawableStart="@drawable/email_icon"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:text="@string/loginEmail"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:theme="@style/login" />

            <!--  Password Label -->

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/password_icon"
                android:drawableStart="@drawable/password_icon"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@string/loginPassword"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:theme="@style/login" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:stateListAnimator="@null"
                android:background="@drawable/button_login"
                android:text="@string/login"
                android:textSize="16sp"
                android:textColor="@color/colorWhite" />

            <!--Button
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="12dp"
                android:text="@string/signUp"
                android:stateListAnimator="@null"
                android:textSize="16sp"
                android:background="@android:color/transparent"
                android:textColor="@color/colorWhite"
                android:clickable="true"/-->

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>