<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nippylinks.android.LoginActivity"
    android:background="@color/colorWhite">

    <RelativeLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <ImageView
            android:visibility="invisible"
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:layout_toStartOf="@id/ico_setting"
            android:layout_toLeftOf="@id/ico_setting"
            android:src="@drawable/back" />

        <TextView
            android:visibility="gone"
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/img_back"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/img_back"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="30dp"
            android:gravity="center_vertical"
            android:text="@string/back"
            android:textColor="@color/colorBackText" />

        <TextView
            android:id="@+id/tv_addLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/titleLinks"
            android:textColor="@color/colorBlack"
            android:layout_alignBaseline="@+id/tv_back"
            android:layout_alignBottom="@+id/tv_back"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_below="@+id/linearLayout1">


        <Button
            android:id="@+id/btn_pick_provider"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/button_continue"
            android:gravity="center"
            android:text="@string/subtitleLinks"
            style="@style/continueButton"
            android:stateListAnimator="@null"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btn_add_cust_link"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:stateListAnimator="@null"
            android:layout_below="@id/linearLayout4"
            style="@style/continueButton"
            android:background="@drawable/button_continue"
            android:gravity="center"
            android:text="@string/linksBtn"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

</RelativeLayout>
