<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nippylinks.android.LoginActivity"
    android:background="@color/colorWhite">

    <RelativeLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <ImageView
            android:visibility="invisible"
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@id/ico_setting"
            android:layout_toStartOf="@id/ico_setting"
            android:src="@drawable/back" />

        <TextView
            android:visibility="gone"
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/img_back"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/img_back"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:gravity="center_vertical"
            android:text="@string/back"
            android:textColor="@color/colorText" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:id="@+id/linearLayout2"
        android:gravity="center_horizontal"
        android:layout_marginTop="56dp"
        android:layout_below="@+id/linearLayout1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:id="@+id/tv_lets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ico_setting"
            android:layout_toEndOf="@id/tv_edit"
            android:layout_toRightOf="@id/tv_edit"
            android:text="@string/titleSignUpEmail"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/tv_what"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/subTitleSignUpEmail"
            android:layout_below="@id/ico_setting"
            android:layout_toRightOf="@id/tv_edit"
            android:layout_toEndOf="@id/tv_edit"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:id="@+id/linearLayout"
        android:gravity="center_horizontal"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/et_email_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:hint="@string/editTextEmail"
            android:gravity="center_horizontal"
            style="@style/NoLineSelection"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:id="@+id/linearLayout4"
        android:gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_height="40dp"
            android:textColor="@android:color/white"
            android:text="@string/continueBtn"/>

    </LinearLayout>

</RelativeLayout>
