<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nippylinks.android.LoginActivity"
    android:id="@+id/rl_select_provider">

    <RelativeLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <ImageView
            android:visibility="invisible"
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@+id/ico_setting"
            android:src="@drawable/back" />

        <TextView
            android:visibility="gone"
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/img_back"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/img_back"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="30dp"
            android:gravity="center_vertical"
            android:text="@string/back"
            android:textColor="@color/colorBackText" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:id="@+id/linearLayout2"
        android:gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:layout_below="@+id/linearLayout1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:id="@+id/tv_lets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ico_setting"
            android:layout_toEndOf="@+id/tv_edit"
            android:layout_toRightOf="@+id/tv_edit"
            android:text="Brand New Day"
            android:textColor="@color/colorWhite"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:id="@+id/linearLayout"
        android:gravity="center_vertical"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textColorHint="@color/colorHint"
            android:gravity="center_horizontal"
            android:textColor="@color/colorLightBlue"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColorHint="@color/colorHint"
            android:gravity="center_horizontal"
            android:textColor="@color/colorLightBlue"/>

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/button_continue"
            android:textColor="@color/colorWhite"
            android:text="@string/continueBtn"/>

    </LinearLayout>

</RelativeLayout>
