<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nippylinks.android.LoginActivity"
    android:background="@color/colorWhite">

    <RelativeLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:id="@+id/tv_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/ico_setting"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:layout_alignTop="@+id/ico_plus"
            android:layout_marginLeft="14dp"
            android:layout_marginStart="14dp"
            android:text="@string/dashboardEdit"
            android:textColor="@color/colorBackText" />

        <ImageView
            android:id="@+id/ico_plus"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@+id/ico_setting"
            android:src="@drawable/plus" />

        <ImageView
            android:id="@+id/ico_setting"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/settings" />

    </RelativeLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:id="@+id/linearLayout2"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/linearLayout1"
        android:gravity="center_horizontal"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <TextView
                android:id="@+id/tv_sortby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dashboardSortBy"
                android:textColor="@color/colorBlack" />

            <TextView
                android:id="@+id/tv_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBackText"
                android:layout_marginLeft="5dp"
                android:text="@string/dashboardFilter"/>
        </LinearLayout>

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:hint="@string/dashboardSearch"
            android:inputType="text"
            android:textColorHint="#808080"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout3">

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <RelativeLayout
                android:id="@+id/linearLayout4_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!-- -->
                <RelativeLayout
                    android:id="@+id/linearLayout4_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/colorGrisBack"
                    android:orientation="horizontal"
                    android:paddingBottom="7dp"
                    android:paddingLeft="7dp"
                    android:paddingTop="7dp">

                    <TextView
                        android:id="@+id/tv_providers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:textSize="16sp"
                        android:text="@string/dashBoardProviders"
                        android:textColor="@color/colorBlack" />

                </RelativeLayout>

                <ListView
                    android:id="@+id/listViewMyProviders"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearLayout4_2"
                    android:layout_marginLeft="4dp"
                    tools:ignore="NestedScrolling" />

                <LinearLayout
                    android:id="@+id/linearLayout5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/listViewMyProviders"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="9dp"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:id="@+id/linearLayout5_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:id="@+id/linearLayout5_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:background="@color/colorGrisBack"
                            android:orientation="horizontal"
                            android:paddingBottom="7dp"
                            android:paddingLeft="7dp"
                            android:paddingTop="7dp">

                            <TextView
                                android:id="@+id/tv_custom_links"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="15dp"
                                android:textSize="16sp"
                                android:text="@string/dashboardCustomLinks"
                                android:textColor="@color/colorBlack" />

                        </RelativeLayout>

                        <ListView
                            android:id="@+id/listViewCustomLinks"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/linearLayout5_2"
                            android:layout_marginBottom="8dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="16dp"
                            tools:ignore="NestedScrolling" />

                    </RelativeLayout>

                </LinearLayout>
            </RelativeLayout>
        </ScrollView>

    </RelativeLayout>
</RelativeLayout>

